  * README: added Installation section (just covers rubygems at the
    moment, but I should have a note about the debian package, too)
  * rubilicious.rb: update version to 0.2.0
  * examples/add_link.rb: exit without proper cli args
  * examples/del_to_xbel.rb: use Rubilicious.to_xbel() instead of
    old Array#to_xbel

* Fri Sep  1 01:17:58 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: added Rubilicious::NoSSLError
  * rubilicious.rb: added documentation for error classes
  * rubilicious.rb: added documentation for Rubilicious::Extras
  * rubilicious.rb: renamed set_http_ssl_attrs to init_http_ssl
  * rubilicious.rb: misc documentation corrections

* Fri Sep  1 02:57:51 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: renamed Rubilicious.to_xbel to Rubilicious.xbel
    (probably a lot less confusing)
  * examples/del_to_xbel.rb: fancier OOP example

* Thu Sep  7 03:58:00 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: Fix long-standing bug with Rubilicious#all
  * rubilicious.rb: No actual change, but verified that all, add,
    update, dates, recent and recent work as advertised

* Fri Sep  8 02:42:36 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * added release_notes-0.2.0.txt
  * rubilicious.rb: moved inbox, sub, unsub, and user_posts methods to
    Rubilicious::Extras::Rubilcious (included with include_inbox or
    include_extras)
  * rubilicious.rb: re-wrote SSL init/verification.  Explained in
    the release notes and the Rubilicious#initialize documentation.

* Fri Sep  8 02:45:48 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: removed X509Error
  * rubilicious.rb: removed old SSL cruft

* Fri Sep  8 02:46:58 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * release_notes-0.2.0.txt: removed old notes

* Fri Sep  8 03:03:53 EDT 2006, Paul Duncan <pabs@pablotron.org>
  * rubilicious.rb: fixed minor typo
  * rubilicious.rb: added documentation for 'ssl_init' and
    'ssl_init_http' options.