@@ -1,7 +1,7 @@
 Rubilicious 0.2.0 README
 ========================
 
-This document was last updated on Fri Sep 01 00:29:07 2006.  Please see
+This document was last updated on Fri Sep 08 03:34:52 2006.  Please see
 the file COPYING for licensing and warranty information.  Visit
 http://pablotron.org/software/rubilicious/ for the latest version of
 this software.
@@ -14,19 +14,41 @@ create an account at Delicious in order to use Rubilicious.  An
 RDoc-generated API reference is in doc/, and some simple examples are in
 examples/.
 
+Note: If you're upgrading from version 0.1.x, please read the file
+"release_notes-0.2.0.txt" for information about several API changes.
+
 
 Requirements
 ============
 * Ruby (http://www.ruby-lang.org/), version 1.8.0 (or newer).
 
+(Yup, that's it!)
+
+
 Installation
 ============
-The easiest way to install Rubilicious is via RubyGems
-(http://rubygems.org/).  If you've got it installed, it's as simple as 
-this:
+The easiest way to install is via RubyGems (http://rubygems.org/).  If
+you've got RubyGems, installing Rubilicious is simple.  Here's how:
 
-  # install rubilicious using rubygems
-  sudo gem install rubilicious
+    # install rubilicious using RubyGems
+    sudo gem install rubilicious
+
+or, without sudo:
+
+    # install rubilicious using RubyGems, without sudo
+    su -c 'gem install rubilicious'
+
+If you don't use RubyGems, you can still install Rubilicious directly
+with the tarball like this: 
+
+    # install rubilicious directly, without RubyGems
+    sudo cp -v rubilicious.rb $(ruby -e 'puts $LOAD_PATH.first')
+
+No sudo?  No problem.  Here's the same command without sudo:
+
+    # install rubilicious directly, without RubyGems or sudo
+    su -c "cp -v rubilicious.rb $(ruby -e 'puts $LOAD_PATH.first')"
+
 
 Reporting Bugs
 ==============
@@ -35,10 +57,10 @@ Feel free to email me at the address below.  Alternatively, you can
 submit your feature request or bug directly to my bug-tracking web
 interface at the following URL:
 
-  http://bugs.pablotron.org/
+    http://bugs.pablotron.org/
 
-(note that you'll need to create an account in order to submit a feature
-request or a bug report via the web interface).
+Note: You'll need to create an account in order to submit a feature
+request or a bug report via the web interface.
 
 
 About the Author
